--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
-    "@types/node": "18.14.0",
+    "@prisma/client": "^4.10.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.14.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "prisma": "^4.10.1",
+    "tailwindcss": "^3.2.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
