switching to mongodb & adding some logic to the borrow and return route

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://kdnzjybw:gSLdg0mh1kLXhI2WwMdP2-DJ3YQLyktf@trumpet.db.elephantsql.com/kdnzjybw"
+DATABASE_URL="mongodb+srv://Rayan:yayakong@cluster0.t42y5oq.mongodb.net/myDb"
