--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "13.1.6",
     "@prisma/client": "^4.10.1",
     "@reduxjs/toolkit": "^1.9.3",
+    "@tanstack/react-query-devtools": "^4.24.10",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
