--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@prisma/client": "^4.10.1",
+    "@tanstack/react-query": "^4.24.10",
     "@tanstack/react-query-devtools": "^4.24.10",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
