--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "swiper": "^9.1.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
